--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.6.0",
-    "next": "13.5.6",
+    "next": "^14.0.2-canary.13",
     "react": "^18",
     "react-dom": "^18"
   },
