--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^1.6.0",
+    "axios": "^1.6.1",
+    "bootstrap": "^5.3.2",
     "next": "^14.0.2-canary.13",
-    "react": "^18",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/react": "^18.2.37",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
