--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "^14.0.2-canary.13",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-router-dom": "^6.18.0"
   },
   "devDependencies": {
     "@types/node": "^20",
