--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "axios": "^1.6.1",
     "bootstrap": "^5.3.2",
+    "formik": "^2.4.5",
     "next": "^14.0.2-canary.13",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
-    "react-router-dom": "^6.18.0"
+    "react-router-dom": "^6.18.0",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/node": "^20",
