--- a/package.json
+++ b/package.json
@@ -9,14 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^1.6.0",
+    "axios": "^1.6.2",
+    "bootstrap": "^5.3.2",
+    "formik": "^2.4.5",
     "next": "^14.0.2-canary.13",
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
+    "react-dom": "^18",
+    "react-hook-form": "^7.48.2",
+    "react-router-dom": "^6.20.0",
+    "styled-components": "^6.1.1",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/react": "^18.2.38",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
